--- a/Esempio2.html
+++ b/Esempio2.html
@@ -7,11 +7,16 @@
     <!--css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        .mine-border {
+            border: 3px solid #ff0000;
+        }
+    </style>
 </head>
 <body>
-    <div class="bg-primary h-75 text-center">1</div>
-    <div class="bg-secondary h-75 text-center mt-xl-5 mt-md-3">2</div>
-        <!--js-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div class="mine-border bg-primary h-75 text-center">1</div>
+    <div class="border border-3 border-danger bg-info h-75 text-center mt-xl-5 mt-md-3">2</div>
+    <!--js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
