--- a/esempi_grid_02.html
+++ b/esempi_grid_02.html
@@ -2,13 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <!--css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        .row .col {
+            background-color: #ff6a00;
+            border: solid 2px #000000;
+        }
+    </style>
 </head>
 <body>
-    <div class="row">
+    <!--<div class="row">
         <div class="col-md-6 col-lg-4 border border-dark text-bg-primary">
             1 of 3
         </div>
@@ -17,6 +24,73 @@
         </div>
         <div class="col-md-6 col-lg-4 border border-dark text-bg-primary">
             3 of 3
+        </div>
+    </div>-->
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                1 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
+            <div class="col">
+                2 of 2
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                1 of 3
+            </div>
+            <div class="col">
+                2 of 3
+            </div>
+            <div class="col">
+                3 of 3
+            </div>
         </div>
     </div>
     <!--js-->
