--- a/esempi_grid_02.html
+++ b/esempi_grid_02.html
@@ -15,18 +15,18 @@
     </style>
 </head>
 <body>
-    <!--<div class="row">
-        <div class="col-md-6 col-lg-4 border border-dark text-bg-primary">
+    <div class="row text-center">
+        <div class="col-sm col-md-6 col-lg-6 border border-dark text-bg-primary">
             1 of 3
         </div>
-        <div class="col-md-6 col-lg-4 border border-dark text-bg-primary">
+        <div class="col-sm col-md-4 col-lg-6 border border-dark text-bg-primary">
             2 of 3
         </div>
-        <div class="col-md-6 col-lg-4 border border-dark text-bg-primary">
+        <div class="col-sm col-md-2 col-lg-12 border border-dark text-bg-primary">
             3 of 3
         </div>
-    </div>-->
-    <div class="container text-center">
+    </div>
+    <!--<div class="container text-center">
         <div class="row">
             <div class="col">
                 1 of 2
@@ -92,7 +92,7 @@
                 3 of 3
             </div>
         </div>
-    </div>
+    </div>-->
     <!--js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
