--- a/esempi_grid_02.html
+++ b/esempi_grid_02.html
@@ -8,22 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-        .row .col {
+       /* .row .col {
             background-color: #ff6a00;
             border: solid 2px #000000;
-        }
+        }*/
     </style>
 </head>
 <body>
-    <div class="row text-center">
-        <div class="col-sm col-md-6 col-lg-6 border border-dark text-bg-primary">
-            1 of 3
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-3 col-md-6 col-lg-6 border border-dark text-bg-primary">
+                1 of 3
+            </div>
+            <div class="col-6 col-md-4 col-lg-6 border border-dark text-bg-primary">
+                2 of 3
+            </div>
+            <div class="col-3 col-md-2 col-lg-12 border border-dark text-bg-primary">
+                3 of 3
+            </div>
         </div>
-        <div class="col-sm col-md-4 col-lg-6 border border-dark text-bg-primary">
-            2 of 3
-        </div>
-        <div class="col-sm col-md-2 col-lg-12 border border-dark text-bg-primary">
-            3 of 3
+        <div class="row">
+            <div class="col border border-dark text-bg-primary">
+                1 of 3
+            </div>
+            <div class="col-auto border border-dark text-bg-primary">
+                2 of 3
+            </div>
+            <div class="col border border-dark text-bg-primary">
+                3 of 3
+            </div>
         </div>
     </div>
     <!--<div class="container text-center">
