--- a/esempio_row-cols.html
+++ b/esempio_row-cols.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="container text-center">
+    <!--<div class="container text-center">
 
-        <div class="row row-cols-2">
+        <div class="row row-cols-2">-->
             <!--gli indico che ogni riga può contenere un massimo di 3 colonne-->
-            <div class="col border border-dark text-bg-primary">
+            <!--<div class="col border border-dark text-bg-primary">
                 1 of 4
             </div>
             <div class="col border border-dark text-bg-primary">
@@ -25,6 +25,15 @@
             <div class="col border border-dark text-bg-primary">
                 4 of 4
             </div>
+        </div>
+    </div>-->
+
+    <div class="container text-center">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+            <div class="col border border-dark text-bg-primary">Column</div>
+            <div class="col border border-dark text-bg-primary">Column</div>
+            <div class="col border border-dark text-bg-primary">Column</div>
+            <div class="col border border-dark text-bg-primary">Column</div>
         </div>
     </div>
     <!--js-->
