--- a/test2.html
+++ b/test2.html
@@ -15,6 +15,7 @@
         .col {
             border: solid 2px black;
             background-color: #10c757;
+            height: 33%
         }
     </style>
 </head>
@@ -48,6 +49,9 @@
             <div class="col">
                 One of three columns
             </div>
+
+
+
         </div><div class="row align-items-end">
             <div class="col">
                 One of three columns
@@ -59,6 +63,20 @@
                 One of three columns
             </div>
         </div>
+
+        <div class="row">
+            <div class="col align-self-start">
+                One of three columns
+            </div>
+            <div class="col align-self-center">
+                One of three columns
+            </div>
+            <div class="col align-self-end">
+                One of three columns
+            </div>
+        </div>
+
+
     </div>
     <!--js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
