--- a/Template.html
+++ b/Template.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="container mt-5 text-center">
-            <div class="row row-cols-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
