--- a/Template.html
+++ b/Template.html
@@ -12,7 +12,7 @@
             padding-inline: 10px;
         }
 
-       /* .carousel img {
+        /* .carousel img {
             max-height: 500px;
             width: 100% !important;
             object-fit: cover;
@@ -22,7 +22,7 @@
 <body>
     <header>
         <!--<nav class="navbar navbar-expand-md bg-body-tertiary">-->
-        <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark" >
+        <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-lg">
                 <a class="navbar-brand" href="#"><i class="bi bi-cup-hot-fill"></i><span class="mine-space"></span>Ristorante Generation</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,21 +57,22 @@
     <main>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="container carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://placehold.co/1600x500" class="d-block w-100" alt="...">
+                <div class="carousel-item h-50 active">
+                    <img src="https://placehold.co/1600x500" class="d-block" alt="...">
                 </div>
-                <div class="carousel-item">
-                    <img src="https://placehold.co/1600x500" class="d-block w-100" alt="...">
+                <div class="carousel-item h-50">
+                    <img src="https://placehold.co/1600x500" class="d-block" alt="...">
                 </div>
-                <div class="carousel-item">
-                    <img src="https://placehold.co/1600x500" class="d-block w-100" alt="...">
+                <div class="carousel-item h-50">
+                    <img src="https://placehold.co/1600x500" class="d-block" alt="...">
                 </div>
             </div>
         </div>
         <div class="container mt-5 text-center">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
+                <!--<div class="row row-cols-3 gy-5">-->
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -81,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -91,7 +92,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -101,7 +102,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -111,7 +112,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -121,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
